issue-203-diagnostic.log
Prepared Toolkit 4.20.2 unified version-control fix
package_status=0
{
  "failures": 0,
  "warnings": 0,
  "result": "passed"
}
Asset health (static): 39 endpoints, 31 local media files, 0 failures, 0 warnings
Audio alias contract: 9 canonical, 0 aliases, 0 failures
Mission requirements runtime fixtures passed
Custom Vehicle Badges runtime fixtures passed
Custom Vehicle Badges contract passed
Mission requirements contract passed
  File "/home/runner/work/missionchief-toolkit-assets/missionchief-toolkit-assets/.github/scripts/test_version_status_contract.py", line 49
    assert "[data-state="latest"]::before{content:"✓"!important" in block
                                                   ^
SyntaxError: invalid character '✓' (U+2713)
Code-integrity release baseline unavailable; current-state checks will still run.
VALIDATION ERROR: live version-status contract failed
validator_status=1
syntax_status=0
parity_status=0
